maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:19: error: expected class or object definition
while(!okgauche()){
^Escaper:24: error: expected class or object definition
def keepHandOnSideWall(){
^Escaper:43: error: expected class or object definition
def Nord(){
^Escaper:64: error: Unmatched closing brace '}' ignored here
} 
^Escaper:66: error: eof expected but '}' found.
}
^